FIX: invisible Lines

--- a/src/css/dicas.css
+++ b/src/css/dicas.css
@@ -18,13 +18,6 @@ header {
   z-index: 1;
 }
 
-.linha {
-  position: relative;
-  top: 25px;    
-  right: 910px;    
-  width: 480px;
-  border: 1px solid rgb(255, 255, 255);
-}
 body {
   margin: 0;
   border: 0;
